load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "converter.go",
        "deep_equal.go",
        "doc.go",
        "helper.go",
    ],
    importpath = "github.com/example/project/pkg/conversion",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_apimachinery//third_party/forked/golang/reflect:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "converter_test.go",
        "helper_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_gofuzz//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/diff:go_default_library",
    ],
)
