load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "labels.go",
        "selector.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/example/project/pkg/labels",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/selection:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_apimachinery//pkg/util/validation:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "labels_test.go",
        "selector_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@io_k8s_apimachinery//pkg/selection:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
    ],
)
