load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "filter.go",
        "mux.go",
        "streamwatcher.go",
        "watch.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/example/project/pkg/watch",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/util/net:go_default_library",
        "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "filter_test.go",
        "mux_test.go",
        "streamwatcher_test.go",
        "watch_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_apimachinery//pkg/watch:go_default_library",
    ],
)
