load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["codec.go"],
    importpath = "github.com/example/project/pkg/api/apitesting",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer/recognizer:go_default_library",
    ],
)
