load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "errors.go",
        "firsthit_restmapper.go",
        "help.go",
        "interfaces.go",
        "lazy.go",
        "meta.go",
        "multirestmapper.go",
        "priority.go",
        "restmapper.go",
    ],
    importpath = "github.com/example/project/pkg/api/meta",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/conversion:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "meta_test.go",
        "multirestmapper_test.go",
        "priority_test.go",
        "restmapper_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_gofuzz//:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/util/diff:go_default_library",
    ],
)
