load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "resource_proto",
    srcs = ["generated.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "resource_go_proto",
    importpath = "github.com/example/project/pkg/api/resource",
    proto = ":resource_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "amount.go",
        "math.go",
        "quantity.go",
        "quantity_proto.go",
        "scale_int.go",
        "suffix.go",
        "zz_generated.deepcopy.go",
    ],
    embed = [":resource_go_proto"],
    importpath = "github.com/example/project/pkg/api/resource",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@in_gopkg_inf_v0//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "amount_test.go",
        "math_test.go",
        "quantity_example_test.go",
        "quantity_proto_test.go",
        "quantity_test.go",
        "scale_int_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_gofuzz//:go_default_library",
        "@in_gopkg_inf_v0//:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
    ],
)
