load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "convert.go",
        "doc.go",
    ],
    importpath = "github.com/example/project/pkg/conversion/queryparams",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["convert_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/conversion/queryparams:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
    ],
)
