load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "lruexpirecache.go",
    ],
    importpath = "github.com/example/project/pkg/util/cache",
    visibility = ["//visibility:public"],
    deps = ["@com_github_hashicorp_golang_lru//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cache_test.go",
        "lruexpirecache_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_groupcache//lru:go_default_library",
        "@io_k8s_apimachinery//pkg/util/clock:go_default_library",
    ],
)
