load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["diff.go"],
    importpath = "github.com/example/project/pkg/util/diff",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["diff_test.go"],
    embed = [":go_default_library"],
)
