load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "errors.go",
    ],
    importpath = "github.com/example/project/pkg/util/errors",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_apimachinery//pkg/util/sets:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["errors_test.go"],
    embed = [":go_default_library"],
)
