load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "intstr_proto",
    srcs = ["generated.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "intstr_go_proto",
    importpath = "github.com/example/project/pkg/util/intstr",
    proto = ":intstr_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["intstr.go"],
    embed = [":intstr_go_proto"],
    importpath = "github.com/example/project/pkg/util/intstr",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_gofuzz//:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["intstr_test.go"],
    embed = [":go_default_library"],
    deps = ["@io_k8s_sigs_yaml//:go_default_library"],
)
