load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "util.go",
    ],
    importpath = "github.com/example/project/pkg/util/mergepatch",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["util_test.go"],
    embed = [":go_default_library"],
)
