load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "http.go",
        "interface.go",
        "port_range.go",
        "port_split.go",
        "util.go",
    ],
    importpath = "github.com/example/project/pkg/util/net",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "http_test.go",
        "interface_test.go",
        "port_range_test.go",
        "port_split_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_spf13_pflag//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
    ],
)
