load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["constants.go"],
    importpath = "github.com/example/project/pkg/util/remotecommand",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library"],
)
