load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["uuid.go"],
    importpath = "github.com/example/project/pkg/util/uuid",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
    ],
)
