load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "wait.go",
    ],
    importpath = "github.com/example/project/pkg/util/wait",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_apimachinery//pkg/util/runtime:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["wait_test.go"],
    embed = [":go_default_library"],
    deps = ["@io_k8s_apimachinery//pkg/util/runtime:go_default_library"],
)
