load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "waitgroup.go",
    ],
    importpath = "github.com/example/project/pkg/util/waitgroup",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["waitgroup_test.go"],
    embed = [":go_default_library"],
)
