load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["decoder.go"],
    importpath = "github.com/example/project/pkg/util/yaml",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["decoder_test.go"],
    embed = [":go_default_library"],
)
