load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fuzzer.go",
        "valuefuzz.go",
    ],
    importpath = "github.com/example/project/pkg/api/apitesting/fuzzer",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_gofuzz//:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["valuefuzz_test.go"],
    embed = [":go_default_library"],
)
